style.css
body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  line-height: 0.8;
  margin: 0;
  padding: 0;
  background-color: #f4f4f4;
  color: #333;
}
header {
  background: #333;
  color: #fff;
  padding: 15px;
  text-align: center;
}

nav {
  text-align: center;
  margin-top: 10px;
}

nav a {
  color: #ff6f0f;
  text-decoration: none;
  margin: 0 10px;
  font-weight: bold;
  text-align: center;
}

main {
  max-width: 800px;
  margin: 20px auto;
  padding: 20px;
  background: #fff;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

img {
  display: block;
  margin: 0 auto 20px auto;
}

#about {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h2 {
  text-align: center;
}

.my-rounded-all {
  border-radius: 15px;
  overflow: hidden;
}

.my-rounded-left {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}

.my-rounded-right {
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
}

